[gd_scene load_steps=62 format=3 uid="uid://dbb6gubo3cjm4"]

[ext_resource type="Script" path="res://scripts/character.gd" id="1_io5r3"]
[ext_resource type="Texture2D" uid="uid://2550g4vitahk" path="res://art/characters/balloon-bird-pink.png" id="2_6jrem"]
[ext_resource type="Texture2D" uid="uid://bk8mxsw15cdlw" path="res://art/ui/blank.png" id="3_r337b"]
[ext_resource type="AudioStream" uid="uid://h16yknk32i1a" path="res://sound/bf-pop.wav" id="3_x6tsq"]
[ext_resource type="AudioStream" uid="uid://cq42vertbdmut" path="res://sound/bf-falling.wav" id="4_eutk4"]
[ext_resource type="AudioStream" uid="uid://bbwvmvydgxiny" path="res://sound/bk-fill.wav" id="5_32qx7"]
[ext_resource type="AudioStream" uid="uid://dre6mybxcwmh2" path="res://sound/bk_filled.wav" id="6_tr0yw"]
[ext_resource type="AudioStream" uid="uid://b6yv3o0egnoij" path="res://sound/bf-drown.wav" id="8_7ucb3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nt8ew"]
radius = 4.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vo41"]
radius = 4.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_clhtm"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 8, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ywba"]
atlas = ExtResource("2_6jrem")
region = Rect2(112, 8, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqbwi"]
atlas = ExtResource("2_6jrem")
region = Rect2(144, 8, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn4et"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 56, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_51jng"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 32, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qphpb"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 80, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5oh1"]
atlas = ExtResource("2_6jrem")
region = Rect2(112, 80, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs2gm"]
atlas = ExtResource("2_6jrem")
region = Rect2(144, 80, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofdbr"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 128, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bosqr"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 104, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocfnc"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 152, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd1le"]
atlas = ExtResource("2_6jrem")
region = Rect2(112, 152, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3mwc"]
atlas = ExtResource("2_6jrem")
region = Rect2(144, 152, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqx1o"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 200, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru82k"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 176, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbcug"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 224, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mc00"]
atlas = ExtResource("2_6jrem")
region = Rect2(112, 224, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oewik"]
atlas = ExtResource("2_6jrem")
region = Rect2(144, 224, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7npq"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 272, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d344c"]
atlas = ExtResource("2_6jrem")
region = Rect2(80, 248, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fitgo"]
atlas = ExtResource("2_6jrem")
region = Rect2(176, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikgk6"]
atlas = ExtResource("2_6jrem")
region = Rect2(200, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu5fr"]
atlas = ExtResource("2_6jrem")
region = Rect2(224, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_bxlbw"]
animations = [{
"frames": [],
"loop": true,
"name": &"0_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clhtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ywba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clhtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqbwi")
}],
"loop": true,
"name": &"1_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn4et")
}],
"loop": false,
"name": &"1_pop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51jng")
}],
"loop": true,
"name": &"1_walk",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qphpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5oh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qphpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs2gm")
}],
"loop": true,
"name": &"2_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofdbr")
}],
"loop": false,
"name": &"2_pop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bosqr")
}],
"loop": true,
"name": &"2_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocfnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd1le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocfnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3mwc")
}],
"loop": true,
"name": &"3_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqx1o")
}],
"loop": false,
"name": &"3_pop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru82k")
}],
"loop": true,
"name": &"3_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbcug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mc00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbcug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oewik")
}],
"loop": true,
"name": &"4_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7npq")
}],
"loop": false,
"name": &"4_pop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d344c")
}],
"loop": true,
"name": &"4_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fitgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikgk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5fr")
}],
"loop": false,
"name": &"parachute",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p8rev"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 152, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti547"]
atlas = ExtResource("2_6jrem")
region = Rect2(32, 152, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aro47"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d60x3"]
atlas = ExtResource("2_6jrem")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii65m"]
atlas = ExtResource("2_6jrem")
region = Rect2(56, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntww4"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqd82"]
atlas = ExtResource("2_6jrem")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2tjn"]
atlas = ExtResource("2_6jrem")
region = Rect2(56, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_delac"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7e8m"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 8, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e44x"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 200, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e3co"]
atlas = ExtResource("2_6jrem")
region = Rect2(32, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0c4m"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrocc"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 104, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsxlw"]
atlas = ExtResource("2_6jrem")
region = Rect2(32, 104, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykafv"]
atlas = ExtResource("2_6jrem")
region = Rect2(8, 56, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvqbw"]
atlas = ExtResource("2_6jrem")
region = Rect2(32, 56, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy5m4"]
atlas = ExtResource("2_6jrem")
region = Rect2(56, 56, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q4adw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8rev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti547")
}],
"loop": true,
"name": &"electrocute",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aro47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d60x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii65m")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntww4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqd82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2tjn")
}],
"loop": false,
"name": &"flap",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_delac")
}],
"loop": true,
"name": &"float",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7e8m")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e44x")
}],
"loop": true,
"name": &"parachute",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e3co")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_y0c4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e3co")
}],
"loop": false,
"name": &"refill",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrocc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsxlw")
}],
"loop": false,
"name": &"turn",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykafv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvqbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy5m4")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wip1b"]
atlas = ExtResource("3_r337b")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpts8"]
atlas = ExtResource("2_6jrem")
region = Rect2(200, 8, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys6pq"]
atlas = ExtResource("2_6jrem")
region = Rect2(176, 8, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaky1"]
atlas = ExtResource("2_6jrem")
region = Rect2(224, 8, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikyrv"]
atlas = ExtResource("2_6jrem")
region = Rect2(200, 8, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqckv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wip1b")
}],
"loop": false,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpts8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys6pq")
}],
"loop": false,
"name": &"fill_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaky1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikyrv")
}],
"loop": false,
"name": &"fill_2",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u622o"]
radius = 3.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s0k5s"]
radius = 6.0
height = 16.0

[node name="Character" type="CharacterBody2D" groups=["character"]]
z_index = 1
script = ExtResource("1_io5r3")

[node name="HasBallonsCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_nt8ew")

[node name="NoBallonsCollisionShape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_3vo41")
disabled = true

[node name="Balloons" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_bxlbw")
animation = &"parachute"
autoplay = "1_idle"

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 4)
sprite_frames = SubResource("SpriteFrames_q4adw")
animation = &"refill"
autoplay = "idle"

[node name="BalloonFilling" type="AnimatedSprite2D" parent="."]
position = Vector2(-11, 4)
sprite_frames = SubResource("SpriteFrames_qqckv")
animation = &"blank"

[node name="FeetArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetArea"]
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_u622o")

[node name="BalloonArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BalloonArea"]
position = Vector2(1, -6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s0k5s")

[node name="Audio" type="Node" parent="."]

[node name="Pop" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_x6tsq")

[node name="Falling" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_eutk4")

[node name="Fill" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_32qx7")
volume_db = -5.356

[node name="Filled" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_tr0yw")

[node name="Drown" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_7ucb3")

[connection signal="animation_changed" from="Balloons" to="." method="_on_balloons_animation_changed"]
[connection signal="animation_finished" from="Balloons" to="." method="_on_balloons_animation_finished"]
[connection signal="animation_changed" from="Sprite" to="." method="_on_sprite_animation_changed"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="BalloonArea" to="." method="_on_balloon_area_area_entered"]
[connection signal="body_shape_entered" from="BalloonArea" to="." method="_on_balloon_area_body_shape_entered"]
[connection signal="finished" from="Audio/Drown" to="." method="_on_drown_finished"]
